manual: Loosen restrictions on failure return type

--- a/wayland-logout.1
+++ b/wayland-logout.1
@@ -28,7 +28,7 @@ environment variables to get the
 corresponding to the compositor instance.
 .Sh EXIT STATUS
 .Nm
-exits with 1 if an error has occurred along with
+exits with non-zero if an error has occurred along with
 the error reasoning and exits with 0 on success.
 .Sh EXAMPLES
 To kill the current compositor instance, run inside
