Use SIGTERM instead of SIGINT
This is consistent with the default kill signal and works even if the compositor has been backgrounded.

--- a/wayland-logout.1
+++ b/wayland-logout.1
@@ -10,7 +10,7 @@ is a compositor agnostic utility for simulating a
 logout with any wayland compositor.
 .Pp
 It sends a
-.Sy SIGINT
+.Sy SIGTERM
 .Xr signal 3
 to the running compositor
 .Sy PID
